--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     height: 40px;
     width: 40px;
     display: inline-block;
-    background-image: url('sushi.png');
+    background-image: url('images/sushi.png');
     background-size: contain;
 }
 .blank {
@@ -29,7 +29,7 @@
     height: 40px;
     width: 40px;
     display: inline-block;
-    background-image: url('onigiri.png');
+    background-image: url('images/onigiri.png');
     background-size: contain;
 }
 #ninjaman {
@@ -37,7 +37,7 @@
     height: 40px;
     width: 40px;
     display: inline-block;
-    background-image: url('ninja.gif');
+    background-image: url('images/ninja.gif');
     background-size: contain;
     position: absolute;
     left: 40px;
